Now tweets are highlighted on rollover, you can click for persistence, working on cloud

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 	<div id="terms" class="search">
 	  <input id="termsInput" class="search-input" type="text" name="terms" placeholder=" What">
 	</div>
+	<div id="user" class="search">
+	  <input id="userInput" class="search-input" type="text" name="user" placeholder=" Who">
+	</div>
 	<div id="location" class="search">
 	  <input id="locationInput" class="search-input" type="text" name="location" placeholder=" Where">
 	</div>
@@ -49,8 +52,9 @@
         <div id="map"></div>
       </div>
       <div id="control">
-	<div id="chart"></div>
-	<div id="tweets"></div>
+        <div id="chart"></div>
+        <div id="tweets"></div>
+        <div id="cloud"></div>
       </div>
     </div>
   </body>
