Starting to get topk output ready for cloud

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       </div>
       <div id="control">
         <div id="chart"></div>
+        <div id="sortOrder"></div>
         <div id="tweets"></div>
         <div id="cloud"></div>
       </div>
