--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>map</title>
     <link rel="stylesheet" href="css/map.css" />
     <link rel="stylesheet" href="css/chart.css" />
+    <link rel="stylesheet" href="lib/js/jQCloud/jqcloud/jqcloud.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <script src="http://openlayers.org/api/OpenLayers.js"></script>
@@ -12,6 +13,7 @@
     <script src="lib/js/twitter-text.js"></script>
     <script src="lib/js/d3.js"></script>
     <script src="lib/js/jsts.js"></script>
+    <script type="text/javascript" src="lib/js/jQCloud/jqcloud/jqcloud-1.0.4.min.js"></script>
     <script src="js/olext.js"></script>
     <script src="js/node.js"></script>
     <script src="js/chart.js"></script>
@@ -56,6 +58,7 @@
         <div id="sortOrder"></div>
         <div id="tweets"></div>
         <div id="cloud"></div>
+        <div id="numTokensText"></div>
       </div>
     </div>
   </body>
