Now have X to delete search contents - not working though for word cloud picks

--- a/index.html
+++ b/index.html
@@ -25,13 +25,16 @@
     <div id="topbar">
       <form id="search" class="search">
 	<div id="terms" class="search">
-	  <input id="termsInput" class="search-input" type="text" name="terms" placeholder=" What">
+	  <input id="termsInput" class="search-input" type="text" name="terms" placeholder=" What"/>
+      <span class="iconClear">X</span>
 	</div>
 	<div id="user" class="search">
-	  <input id="userInput" class="search-input" type="text" name="user" placeholder=" Who">
+	  <input id="userInput" class="search-input" type="text" name="user" placeholder=" Who"/>
+      <span class="iconClear">X</span>
 	</div>
 	<div id="location" class="search">
-	  <input id="locationInput" class="search-input" type="text" name="location" placeholder=" Where">
+	  <input id="locationInput" class="search-input" type="text" name="location" placeholder=" Where"/>
+      <span class="iconClear">X</span>
 	</div>
 	<button id="submit" class="search-input" type="submit">
 	  <div id="submit-icon" class="sprites search"></div>
