Added code to add icon to corner

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
   <body>
     <div id="topbar">
+        <div id="promo"><img src="img/mapd_cropped.png" class="logo-image"></div>
       <form id="search" class="search">
 	<div id="terms" class="search">
 	  <input id="termsInput" class="search-input" type="text" name="terms" placeholder=" What"/>
@@ -40,6 +41,7 @@
 	  <div id="submit-icon" class="sprites search"></div>
 	</button>
       </form>
+    <!--<div id="promo">Powered by MapD</div>-->
       <div id="settings" class="settings">
 	<button id="gridSmall" class="settings-button" type="button" title="small grid">
 	  <div class="sprites grid zoom75"></div>
