--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
       </form>
     <!--<div id="promo">Powered by MapD</div>-->
       <div id="settings" class="settings">
+        <button id="pointButton" class="settings-button" type="button" title="Points">
+          <div id="pointButtonImg"></div>
+        <button id="heatButton" class="settings-button" type="button" title="Heatmap">
+          <div id="heatButtonImg"></div>
+      <!--
 	<button id="gridSmall" class="settings-button" type="button" title="small grid">
 	  <div class="sprites grid zoom75"></div>
 	</button>
@@ -52,6 +57,7 @@
 	<button id="gridLarge" class="settings-button" type="button" title="large grid">
 	  <div class="sprites grid zoom125"></div>
 	</button>
+    -->
       </div>
     </div>
     <div id="main">
