Added other base maps - OpenStreetMap not working for some reason

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
     <!--<div id="promo">Powered by MapD</div>-->
       <div id="settings" class="settings">
         <button id="pointButton" class="settings-button" type="button" title="Points">
-          <div id="pointButtonImg"></div>
+          <!--<div id="pointButtonImg"></div>-->
         <button id="heatButton" class="settings-button" type="button" title="Heatmap">
-          <div id="heatButtonImg"></div>
+          <!--<div id="heatButtonImg"></div>-->
       <!--
 	<button id="gridSmall" class="settings-button" type="button" title="small grid">
 	  <div class="sprites grid zoom75"></div>
