Have anim buttons and social buttons

--- a/index.html
+++ b/index.html
@@ -40,25 +40,26 @@
 	<button id="submit" class="search-input" type="submit">
 	  <div id="submit-icon" class="sprites search"></div>
 	</button>
+
       </form>
-    <!--<div id="promo">Powered by MapD</div>-->
-      <div id="settings" class="settings">
-        <button id="pointButton" class="settings-button" type="button" title="Points">
-          <!--<div id="pointButtonImg"></div>-->
-        <button id="heatButton" class="settings-button" type="button" title="Heatmap">
-          <!--<div id="heatButtonImg"></div>-->
-      <!--
-	<button id="gridSmall" class="settings-button" type="button" title="small grid">
-	  <div class="sprites grid zoom75"></div>
-	</button>
-	<button id="gridMedium" class="settings-button" type="button" title="medium grid">
-	  <div class="sprites grid"></div>
-	</button>
-	<button id="gridLarge" class="settings-button" type="button" title="large grid">
-	  <div class="sprites grid zoom125"></div>
-	</button>
-    -->
-      </div>
+    <div id="animControls">
+      <button id="play" class="anim-input" type="button" title="Play">
+      <div id="play-icon"></div>
+      <button id="pause" class="anim-input" type="button" title="Pause">
+	  <div id="pause-icon"></div>
+    </div>
+    <div id="social"> 
+      <button id="twitter" class="social-button" type="button" title="Twitter">
+      <div id="twitter-icon"></div>
+      <button id="facebook" class="social-button" type="button" title="Facebook">
+      <div id="facebook-icon"></div>
+    </div>
+
+    <div id="settings" class="settings">
+      <button id="pointButton" class="settings-button" type="button" title="Points">
+        <!--<div id="pointButtonImg"></div>-->
+      <button id="heatButton" class="settings-button" type="button" title="Heatmap">
+    </div>
     </div>
     <div id="main">
       <div id="mapview">
