Added new images for logo and point tab

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <body>
     <div id="topbar">
-        <div id="promo"><img src="img/mapd_cropped.png" class="logo-image"></div>
+        <div id="promo"><img src="img/mapd_logo.png" class="logo-image"></div>
       <form id="search" class="search">
 	<div id="terms" class="search">
 	  <input id="termsInput" class="search-input" type="text" name="terms" placeholder=" What"/>
