Now with play and pause buttons and favicons

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE HTML>
 <html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>map</title>
+  <head profile="http://www.w3.org/2005/10/profile">
+    <link rel="icon" 
+          type="image/png" 
+          href="img/favicons/d_hyper_webtab.png">
+      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Tweetmap</title>
     <link rel="stylesheet" href="css/map.css" />
     <link rel="stylesheet" href="css/chart.css" />
     <link rel="stylesheet" href="lib/js/jQCloud/jqcloud/jqcloud.css">
@@ -43,10 +46,10 @@
 
       </form>
     <div id="animControls">
-      <button id="play" class="anim-input" type="button" title="Play">
-      <div id="play-icon"></div>
-      <button id="pause" class="anim-input" type="button" title="Pause">
-	  <div id="pause-icon"></div>
+      <button id="play-pause" class="anim-input play-icon" type="button" title="Play/Pause">
+      <!--<div id="play-icon"></div>-->
+      <button id="stop" class="anim-input stop-icon" type="button" title="Stop">
+	  <!--<div id="stop-icon"></div>-->
     </div>
     <div id="social"> 
       <button id="twitter" class="social-button" type="button" title="Twitter">
