Added website and social links

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <body>
     <div id="topbar">
-        <div id="promo"><img src="img/mapd_logo.png" class="logo-image"></div>
+        <div id="promo"><a href="http://www.map-d.com" target="_blank"><img src="img/mapd_logo.png" class="logo-image"></a></div>
       <form id="search" class="search">
 	<div id="terms" class="search">
 	  <input id="termsInput" class="search-input" type="text" name="terms" placeholder=" What"/>
@@ -52,10 +52,12 @@
 	  <!--<div id="stop-icon"></div>-->
     </div>
     <div id="social"> 
-      <button id="twitter" class="social-button" type="button" title="Twitter">
+      <a href="https://twitter.com/datarefined" target="_blank"><img id="twitter-icon" src="img/twitter-logo.png"></a>
+      <a href="https://facebook.com/datarefined" target="_blank"><img id="facebook-icon" src="img/facebook-logo.png"></a>
+      <!--<button id="twitter" class="social-button" type="button" title="Twitter">
       <div id="twitter-icon"></div>
       <button id="facebook" class="social-button" type="button" title="Facebook">
-      <div id="facebook-icon"></div>
+      <div id="facebook-icon"></div>-->
     </div>
 
     <div id="settings" class="settings">
