--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="lib/js/d3.js"></script>
     <script src="lib/js/jsts.js"></script>
     <script type="text/javascript" src="lib/js/jQCloud/jqcloud/jqcloud-1.0.4.min.js"></script>
+    <script type="text/javascript" src="lib/js/jquery.cookie.js"></script>
     <script src="js/olext.js"></script>
     <script src="js/node.js"></script>
     <script src="js/chart.js"></script>
