--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div id="cloudBox">
                 <form>
                     <div id="cloudSource">
-                        <input type="radio" id="cloudWords" value="words" name="cloudSource" checked /><label for "cloudWords">Words</label>
+                        <input type="radio" id="cloudWords" value="words" name="cloudSource" /><label for "cloudWords">Words</label>
                         <input type="radio" id="cloudUsers" value="users" name="cloudSource"  /><label for "cloudUsers">Users</label>
                     </div>
                 </form>
