--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Tweetmap</title>
     <link rel="stylesheet" href="css/map.css" />
     <link rel="stylesheet" href="css/chart.css" />
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
-    <!--<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/themes/cupertino/jquery-ui.min.css" />-->
+    <!--<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/blacktie/jquery-ui.css" />-->
+    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/themes/cupertino/jquery-ui.min.css" />
     <link rel="stylesheet" href="lib/js/jQCloud/jqcloud/jqcloud.css" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
@@ -82,8 +82,8 @@
             <div id="cloudBox">
                 <form>
                     <div id="cloudSource">
-                        <input type="radio" id="cloudWords" value="words" name="cloudSource" /><label for "cloudWords">Words</label>
-                        <input type="radio" id="cloudUsers" value="users" name="cloudSource"  /><label for "cloudUsers">Users</label>
+                        <input type="radio" id="cloudWords" value="words" name="cloudSource" /><label for="cloudWords">Words</label>
+                        <input type="radio" id="cloudUsers" value="users" name="cloudSource"  /><label for="cloudUsers">Users</label>
                     </div>
                 </form>
                 <div id="cloud"></div>
