Added base of barchart class

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="js/olext.js"></script>
     <script src="js/node.js"></script>
     <script src="js/chart.js"></script>
+    <script src="js/barchart.js"></script>
     <script src="js/mapd.js"></script>
     <script src="js/map.js"></script>
 </head>
