Now barchart works correctly - may need a little formatting

--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
         <div id="tweets"></div> 
             <div id="cloudBox">
                 <form>
-                    <div id="cloudSource">
-                        <input type="radio" id="cloudWords" value="words" name="cloudSource" /><label for="cloudWords">Words</label>
-                        <input type="radio" id="cloudUsers" value="users" name="cloudSource"  /><label for="cloudUsers">Users</label>
+                    <div id="dataSource">
+                        <input type="radio" id="dataWords" value="words" name="dataSource" /><label for="dataWords">Words</label>
+                        <input type="radio" id="dataUsers" value="users" name="dataSource"  /><label for="dataUsers">Users</label>
                     </div>
                 </form>
                 <div id="cloud"></div>
