Now can switch between cloud and chart - need to enable click on word though

--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
         <div id="tweets"></div> 
             <div id="cloudBox">
                 <form>
+                    <div id="displayMode">
+                        <input type="radio" id="cloudDisplay" value="cloud" name="displayMode" /><label for="cloudDisplay">Cloud</label>
+                        <input type="radio" id="barDisplay" value="chart" name="displayMode"  /><label for="barDisplay">Graph</label>
+                    </div>
+                </form>
+                <form>
                     <div id="dataSource">
                         <input type="radio" id="dataWords" value="words" name="dataSource" /><label for="dataWords">Words</label>
                         <input type="radio" id="dataUsers" value="users" name="dataSource"  /><label for="dataUsers">Users</label>
