--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Tweetmap</title>
     <link rel="stylesheet" href="css/map.css" />
     <link rel="stylesheet" href="css/chart.css" />
-    <!--<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/blacktie/jquery-ui.css" />-->
-    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/themes/cupertino/jquery-ui.min.css" />
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+    <!--<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/themes/smoothness/jquery-ui.min.css" />-->
     <link rel="stylesheet" href="lib/js/jQCloud/jqcloud/jqcloud.css" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
@@ -81,18 +81,17 @@
         <div id="sortOrder"></div>
         <div id="tweets"></div> 
             <div id="cloudBox">
-                <form>
-                    <div id="displayMode">
-                        <input type="radio" id="cloudDisplay" value="cloud" name="displayMode" /><label for="cloudDisplay">Cloud</label>
-                        <input type="radio" id="barDisplay" value="chart" name="displayMode"  /><label for="barDisplay">Graph</label>
-                    </div>
-                </form>
-                <form>
-                    <div id="dataSource">
-                        <input type="radio" id="dataWords" value="words" name="dataSource" /><label for="dataWords">Words</label>
-                        <input type="radio" id="dataUsers" value="users" name="dataSource"  /><label for="dataUsers">Users</label>
-                    </div>
-                </form>
+                <div id="toolbar" class="ui-widget-header ui-corner-all">
+                        <span id="displayMode">
+                            <input type="radio" id="cloudDisplay" value="cloud" name="displayMode" /><label for="cloudDisplay">Cloud</label>
+                            <input type="radio" id="barDisplay" value="chart" name="displayMode"  /><label for="barDisplay">Graph</label>
+                        </span>
+                        <span id="dataSource">
+                            <input type="radio" id="dataWords" value="words" name="dataSource" /><label for="dataWords">Words</label>
+                            <input type="radio" id="dataUsers" value="users" name="dataSource"  /><label for="dataUsers">Users</label>
+                            <input type="radio" id="dataGeo" value="geo" name="dataSource"  /><label for="dataGeo">Geo</label>
+                        </span>
+                </div>
                 <div id="cloud"></div>
                 <div id="numTokensText"></div>
             </div>
