--- a/index.html
+++ b/index.html
@@ -86,11 +86,18 @@
                             <input type="radio" id="cloudDisplay" value="cloud" name="displayMode" /><label for="cloudDisplay">Cloud</label>
                             <input type="radio" id="barDisplay" value="chart" name="displayMode"  /><label for="barDisplay">Graph</label>
                         </span>
+                        <!--<span id="lockMode">
+                            <input type="radio" id="tokensUnlocked" value="unlocked" name="lockMode" /><label for="tokensUnlocked"></label>
+
+                            <input type="radio" id="tokensLocked" value="locked" name="lockMode" /><label for="tokensLocked"></label>j
+                        </span>-->
                         <span id="dataSource">
                             <input type="radio" id="dataWords" value="words" name="dataSource" /><label for="dataWords">Words</label>
                             <input type="radio" id="dataUsers" value="users" name="dataSource"  /><label for="dataUsers">Users</label>
                             <input type="radio" id="dataGeo" value="geo" name="dataSource"  /><label for="dataGeo">Geo</label>
+                            <input type="radio" id="dataOrigin" value="origin" name="dataSource"  /><label for="dataOrigin">Origin</label>
                         </span>
+                        <button id="lock">unlocked</button>
                 </div>
                 <div id="cloud"></div>
                 <div id="numTokensText"></div>
