Added tweet button

--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
 	  <!--<div id="stop-icon"></div>-->
     </div>
     <div id="social"> 
-      <a href="https://twitter.com/datarefined" target="_blank"><img id="twitter-icon" src="img/twitter-logo.png"></a>
-      <a href="https://facebook.com/datarefined" target="_blank"><img id="facebook-icon" src="img/facebook-logo.png"></a>
+      <a href="https://twitter.com/share" class="twitter-share-button" data-via="datarefined" data-related="datarefined" data-hashtags="MapD" data-dnt="true">Tweet this map</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+      <!--<a href="https://twitter.com/datarefined" target="_blank"><img id="twitter-icon" src="img/twitter-logo.png"></a>
+      <a href="https://facebook.com/datarefined" target="_blank"><img id="facebook-icon" src="img/facebook-logo.png"></a>-->
       <!--<button id="twitter" class="social-button" type="button" title="Twitter">
       <div id="twitter-icon"></div>
       <button id="facebook" class="social-button" type="button" title="Facebook">
