--- a/index.html
+++ b/index.html
@@ -94,10 +94,14 @@
                             <input type="radio" id="tokensLocked" value="locked" name="lockMode" /><label for="tokensLocked"></label>j
                         </span>-->
                         <span id="dataSource">
-                            <input type="radio" id="dataWords" value="words" name="dataSource" /><label for="dataWords">Words</label>
-                            <input type="radio" id="dataUsers" value="users" name="dataSource"  /><label for="dataUsers">Users</label>
-                            <input type="radio" id="dataGeo" value="geo" name="dataSource"  /><label for="dataGeo">Geo</label>
-                            <input type="radio" id="dataOrigin" value="origin" name="dataSource"  /><label for="dataOrigin">Origin</label>
+                          <input type="radio" id="dataWords" value="words" name="dataSource" /><label for="dataWords">Words</label>
+                          <input type="radio" id="dataUsers" value="users" name="dataSource"  /><label for="dataUsers">Users</label>
+                          <input type="radio" id="dataGeo" value="geo" name="dataSource"  /><label for="dataGeo">Geo</label>
+                          <input type="radio" id="dataOrigin" value="origin" name="dataSource"  /><label for="dataOrigin">Origin</label>
+                        </span>
+                        <span id="dataNums">
+                          <input type="radio" id="dataCounts" value="counts" name="dataNums" /><label for="dataCounts">#</label>
+                          <input type="radio" id="dataPercents" value="percents" name="dataNums"  /><label for="dataPercents">%</label>
                         </span>
                         <button id="lock">unlocked</button>
                 </div>
