New point and heat buttons - moved them to the left

--- a/index.html
+++ b/index.html
@@ -58,12 +58,20 @@
 	</button>
 
       </form>
+
+    <div id="settings" class="settings">
+      <button id="pointButton" class="settings-button" type="button" title="Points">Points</button>
+        <!--<div id="pointButtonImg"></div>-->
+      <button id="heatButton" class="settings-button" type="button" title="Heatmap">Heatmap</button>
+    </div>
+
     <div id="animControls">
       <button id="play-pause" class="anim-input play-icon" type="button" title="Play/Pause">
       <!--<div id="play-icon"></div>-->
       <button id="stop" class="anim-input stop-icon" type="button" title="Stop">
 	  <!--<div id="stop-icon"></div>-->
     </div>
+
     <div id="social" data-dropdown="#share-dropdown"> 
         <div id="share">Share ▾</div>
     </div>
@@ -81,11 +89,6 @@
       <!--<button id="twitter" class="social-button" type="button" title="Twitter">
       <div id="twitter-icon"></div>-->
 
-    <div id="settings" class="settings">
-      <button id="pointButton" class="settings-button" type="button" title="Points">
-        <!--<div id="pointButtonImg"></div>-->
-      <button id="heatButton" class="settings-button" type="button" title="Heatmap">
-    </div>
     </div>
     <div id="main">
       <div id="mapview">
