Fixed missing end div in topbar that was causing left bar to disappear

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
     </div>
 
     <div id="animControls">
-      <button id="play-pause" class="anim-input play-icon" type="button" title="Play/Pause">
+      <button id="play-pause" class="anim-input play-icon" type="button" title="Play/Pause"></button>
       <!--<div id="play-icon"></div>-->
-      <button id="stop" class="anim-input stop-icon" type="button" title="Stop">
+      <button id="stop" class="anim-input stop-icon" type="button" title="Stop"></button>
 	  <!--<div id="stop-icon"></div>-->
     </div>
     <div id="social">
@@ -85,6 +85,7 @@
         <div id="share">Share ▾</div>
      </div>
       <div class="fb-like" data-href="https://www.facebook.com/datarefined" data-width="120" data-height="30" data-colorscheme="dark" data-layout="button_count" data-action="like" data-show-faces="true" data-send="false"></div>
+   </div>
    </div>
       <!--
       <a href="https://twitter.com/share" class="twitter-share-button" data-via="datarefined" data-related="datarefined" data-hashtags="MapD" data-dnt="true">Tweet this map</a>
