--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </div>
     <div id="social">
      <div id="social-share" data-dropdown="#share-dropdown"> 
-        <div id="share">Share ▾</div>
+        <div id="share">Post this map ▾</div>
      </div>
       <div class="fb-like" data-href="https://www.facebook.com/datarefined" data-width="120" data-height="30" data-colorscheme="dark" data-layout="button_count" data-action="like" data-show-faces="false" data-send="false"></div>
 
@@ -146,9 +146,9 @@
     <div id="link-dialog" title="Link to this map view"> </div>
     <div id="share-dropdown" class="dropdown dropdown-anchor-right has-icons">
         <ul id="share-menu" class="dropdown-menu">
-            <li id="twitter-share"><span>Tweet this Map</span></li>
-            <li id="facebook-share"><span>Share on Facebook</span></li>
-            <li id="clipboard-share"><span>Copy Permalink</span></li>
+            <li id="twitter-share"><span>Tweet it</span></li>
+            <li id="facebook-share"><span>Post on Facebook</span></li>
+            <li id="clipboard-share"><span>Permalink</span></li>
                 <!--<a href="#">Tweet this Map</li>>
             <li id="facebook-share">
                 <a href="#">Share on Facebook</li>
