Moved anim buttons to the bottom, added bottom black bar, changed chart width so it didnt go off the page, and changed height of left bar so it didnt scroll of the page - this also seemed to fixed the bug where the showing results range numbers werent correct

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>mapD Tweetmap</title>
     <link rel="stylesheet" href="css/map.css" />
     <link rel="stylesheet" href="css/chart.css" />
+    <!--<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />-->
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
     <!--<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/themes/smoothness/jquery-ui.min.css" />-->
     <link rel="stylesheet" href="lib/js/jQCloud/jqcloud/jqcloud.css" />
@@ -73,13 +74,11 @@
         <!--<div id="pointButtonImg"></div>-->
       <button id="heatButton" class="settings-button" type="button" title="Heatmap">Heatmap</button>
     </div>
-
-    <div id="animControls">
+    
+    <!--<div id="animControls">
       <button id="play-pause" class="anim-input play-icon" type="button" title="Play/Pause"></button>
-      <!--<div id="play-icon"></div>-->
       <button id="stop" class="anim-input stop-icon" type="button" title="Stop"></button>
-	  <!--<div id="stop-icon"></div>-->
-    </div>
+    </div>-->
     <div id="social">
      <div id="social-share" data-dropdown="#share-dropdown"> 
         <div id="share">Post this map ▾</div>
@@ -91,9 +90,6 @@
 
 
    </div>
-
-
-
    </div>
       <!--
       <a href="https://twitter.com/share" class="twitter-share-button" data-via="datarefined" data-related="datarefined" data-hashtags="MapD" data-dnt="true">Tweet this map</a>
@@ -146,16 +142,9 @@
     <div id="link-dialog" title="Link to this map view"> </div>
     <div id="share-dropdown" class="dropdown dropdown-anchor-right has-icons">
         <ul id="share-menu" class="dropdown-menu">
-            <li id="twitter-share"><span>Tweet it</span></li>
-            <li id="facebook-share"><span>Post on Facebook</span></li>
+            <li id="twitter-share"><span>On Twitter</span></li>
+            <li id="facebook-share"><span>On Facebook</span></li>
             <li id="clipboard-share"><span>Permalink</span></li>
-                <!--<a href="#">Tweet this Map</li>>
-            <li id="facebook-share">
-                <a href="#">Share on Facebook</li>
-            </li>
-            <li id="clipboard-share">
-                <a href="#">Copy Link</li>
-            </li>-->
         </ul>
     </div>
   </body>
