Now all the chart stuff with the new buttons seems to work correctly

--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
         <div id="tweets"></div> 
             <div id="cloudBox">
                 <div id="toolbar">
-                  <div class="data-menu" id="dataDisplay" data-dropdown="#dataDisplayDropdown"><span class="menu-text">Cloud</span><span class="drop-triangle">▾</span></div>
-                  <div class="data-menu" id="dataSource" data-dropdown="#dataSourceDropdown"><span class="menu-text">Words</span><span class="drop-triangle">▾</span></div>
-                  <div class="data-menu" id="dataNums" data-dropdown="#dataNumsDropdown"><span class="menu-text">Counts</span><span class="drop-triangle">▾</span></div>
+                  <div class="data-menu" id="dataDisplay" data-dropdown="#dataDisplayDropdown"><span class="menu-text"></span><span class="drop-triangle">▾</span></div>
+                  <div class="data-menu" id="dataSource" data-dropdown="#dataSourceDropdown"><span class="menu-text"></span><span class="drop-triangle">▾</span></div>
+                  <div class="data-menu" id="dataMode" data-dropdown="#dataModeDropdown"><span class="menu-text"></span><span class="drop-triangle">▾</span></div>
                   <button id="lock">unlocked</button>
                 </div>
 
@@ -166,10 +166,10 @@
         </ul>
     </div>
     
-    <div id="dataNumsDropdown" class="dropdown dropdown-anchor-left ">
-        <ul id="dataNumsMenu" class="dropdown-menu drop-menu nums-menu">
-            <li id="dataNumsCounts"><span>Counts</span><span class="checkmark">&#x2713</span></li>
-            <li id="dataNumsPercents"><span>Percents</span><span class="checkmark">&#x2713</span></li>
+    <div id="dataModeDropdown" class="dropdown dropdown-anchor-left ">
+        <ul id="dataModeMenu" class="dropdown-menu drop-menu mode-menu">
+            <li id="dataModeCounts"><span>Counts</span><span class="checkmark">&#x2713</span></li>
+            <li id="dataModePercents"><span>Percents</span><span class="checkmark">&#x2713</span></li>
         </ul>
     </div>
   </body>
