--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/map.css" />
     <link rel="stylesheet" href="css/chart.css" />
     <!--<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />-->
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/dark-hive/jquery-ui.css" />
     <!--<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/themes/smoothness/jquery-ui.min.css" />-->
     <link rel="stylesheet" href="lib/js/jQCloud/jqcloud/jqcloud.css" />
     <link type="text/css" rel="stylesheet" href="lib/css/jquery.dropdown.css" />
@@ -26,7 +26,7 @@
     <script src="lib/js/jsts.js"></script>
     <script type="text/javascript" src="lib/js/jQCloud/jqcloud/jqcloud-1.0.4.min.js"></script>
     <script type="text/javascript" src="lib/js/jquery.cookie.js"></script>
-    <script type="text/javascript" src="lib/js/jquery.dropdown.min.js"></script>
+    <script type="text/javascript" src="lib/js/jquery.dropdown.js"></script>
     <!--<script type="text/javascript" src="lib/js/jquery.zclip.min.js"></script>-->
 
 
