--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
         <div id="tweets"></div> 
             <div id="cloudBox">
                 <div id="toolbar">
-                  <div class="data-menu" id="dataDisplay" data-dropdown="#dataDisplayDropdown" title="Display type"><span class="menu-text"></span><span class="drop-triangle">▾</span></div>
-                  <div class="data-menu" id="dataSource" data-dropdown="#dataSourceDropdown" title="Variable to group by"><span class="menu-text"></span><span class="drop-triangle">▾</span></div>
-                  <div class="data-menu" id="dataMode" data-dropdown="#dataModeDropdown" title="How variable is sorted"><span class="menu-text"></span><span class="drop-triangle">▾</span></div>
+                  <div class="data-menu" id="dataDisplay" data-dropdown="#dataDisplayDropdown" title="Visualization type"><span class="category-text">Chart:</span><span class="choice-text"></span><span class="drop-triangle">▾</span></div>
+                  <div class="data-menu" id="dataSource" data-dropdown="#dataSourceDropdown" title="Variable to group by"><span class="category-text">Variable:</span><span class="choice-text"></span><span class="drop-triangle">▾</span></div>
+                  <div class="data-menu" id="dataMode" data-dropdown="#dataModeDropdown" title="How variable is sorted"><span class="category-text">Scale:</span><span class="choice-text"></span><span class="drop-triangle">▾</span></div>
                   <button id="lock">unlocked</button>
                 </div>
 
@@ -151,23 +151,26 @@
         </ul>
     </div>
     <div id="dataDisplayDropdown" class="dropdown dropdown-anchor-left ">
-        <ul id="dataDisplayMenu" class="dropdown-menu drop-menu display-menu">
+        <ul id="dataDisplayMenu" class="dropdown-menu drop-menu data-dropdown display-menu">
             <li id="dataDisplayCloud"><span>Cloud</span><span class="checkmark">&#x2713</span></li>
             <li id="dataDisplayBarchart"><span>Barchart</span><span class="checkmark">&#x2713</span></li>
         </ul>
     </div>
 
     <div id="dataSourceDropdown" class="dropdown dropdown-anchor-left ">
-        <ul id="dataSourceMenu" class="dropdown-menu drop-menu source-menu">
-            <li id="dataSourceWords"><span>Words</span><span class="checkmark">&#x2713</span></li>
-            <li id="dataSourceUsers"><span>Users</span><span class="checkmark">&#x2713</span></li>
-            <li id="dataSourceCountries"><span>Countries</span><span class="checkmark">&#x2713</span></li>
+        <ul id="dataSourceMenu" class="dropdown-menu drop-menu data-dropdown source-menu">
+            <li id="dataSourceWord"><span>Word</span><span class="checkmark">&#x2713</span></li>
+            <li id="dataSourceUser"><span>User</span><span class="checkmark">&#x2713</span></li>
             <li id="dataSourceOS-App"><span>OS-App</span><span class="checkmark">&#x2713</span></li>
+            <li id="dataSourceCountry"><span>Country</span><span class="checkmark">&#x2713</span></li>
+            <li id="dataSourceState"><span>State</span><span class="checkmark">&#x2713</span></li>
+            <li id="dataSourceCounty"><span>County</span><span class="checkmark">&#x2713</span></li>
+            <li id="dataSourceZip"><span>Zip</span><span class="checkmark">&#x2713</span></li>
         </ul>
     </div>
     
     <div id="dataModeDropdown" class="dropdown dropdown-anchor-left ">
-        <ul id="dataModeMenu" class="dropdown-menu drop-menu mode-menu">
+        <ul id="dataModeMenu" class="dropdown-menu drop-menu data-dropdown mode-menu">
             <li id="dataModeCounts"><span>Counts</span><span class="checkmark">&#x2713</span></li>
             <li id="dataModePercents"><span>Percents</span><span class="checkmark">&#x2713</span></li>
         </ul>
