--- a/index.html
+++ b/index.html
@@ -70,9 +70,12 @@
       </form>
 
     <div id="settings" class="settings">
-      <button id="pointButton" class="settings-button" type="button" title="Points">Points</button>
+      <!--<button id="pointButton" class="settings-button" title="Points">Points</button>-->
+      <button id="pointButton" class="settings-button" title="Points">Points</button>
+      <button id="pointSelect" class="settings-drop-button" data-dropdown="#pointDropdown">▾</button>
         <!--<div id="pointButtonImg"></div>-->
-      <button id="heatButton" class="settings-button" type="button" title="Heatmap">Heatmap</button>
+      <button id="heatButton" class="settings-button" title="Heatmap">Heatmap</button>
+      <button id="heatSelect" class="settings-drop-button">▾</button>
     </div>
     
     <!--<div id="animControls">
@@ -143,6 +146,24 @@
       <div id="chart"></div>
     </div>
     <div id="link-dialog" title="Link to this map view"> </div>
+    <div id="pointDropdown" class="dropdown dropdown-anchor-right">
+      <ul id="pointMenu" class="dropdown-menu drop-menu">
+        <li id="pointSizeOpt">
+          <span style="float:left">Size</span>
+          <div id="pointSizes" style="float:left; margin-left:10px";>
+            <div class="circle" style="margin-top: 6px; width:4px; height:4px;"></div>
+            <div class="circle" style="margin-top: 6px; width:5px; height:5px;"></div>
+            <div class="circle" style="margin-top: 6px; width:6px; height:6px;"></div>
+            <div class="circle" style="margin-top: 6px; width:7px; height:7px;"></div>
+            <div class="circle" style="margin-top: 6px; width:8px; height:8px;"></div>
+            <div class="circle" style="margin-top: 6px; width:9px; height:9px;"></div>
+          </div>
+          <div style="clear: both;"></div>
+        </li>
+        <li id="pointColorOpt"><span>Color</span></li>
+      </ul>
+    </div>
+
     <div id="share-dropdown" class="dropdown dropdown-anchor-right has-icons">
         <ul id="shareMenu" class="dropdown-menu drop-menu">
             <li id="twitter-share"><span>On Twitter</span></li>
