Now can color by user or os-app

--- a/index.html
+++ b/index.html
@@ -160,7 +160,13 @@
           </div>
           <div style="clear: both;"></div>
         </li>
-        <li id="pointColorOpt"><span>Color</span></li>
+        <li id="pointColorByOpt">
+            <span style="float:left">Color by</span>
+            <div id='pointColorNone' class="color-by-cat">None</div>
+            <div id='pointColorUser' class="color-by-cat">User</div>
+            <div id='pointColorOS'class="color-by-cat">OS/App</div>
+            <div style="clear: both;"></div>
+        </li>
       </ul>
     </div>
 
