Now can restore point color, size, and category from link, also included jquery-minicolors

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <script src="js/barchart.js"></script>
     <script src="js/mapd.js"></script>
     <script src="js/map.js"></script>
-    <script src="lib/js/jquery-minicolors/jquery.minicolors.js">
+    <script type="text/javascript" src="lib/js/jquery-minicolors/jquery.minicolors.min.js"></script>
 </head>
 
   <body>
