Now user can change heatramps

--- a/index.html
+++ b/index.html
@@ -181,6 +181,13 @@
           <div id="blurSlider"></div>
           <div style="clear: both;"></div>
         </li>
+        <li id="colorRamps"></li>
+        <!--
+        <li id="heatLevelOpt">
+          <span style="float:left">Level</span>
+          <div id="levelSlider"></div>
+          <div style="clear: both;"></div>
+        </li>-->
       </ul>
     </div>
     <div id="share-dropdown" class="dropdown dropdown-anchor-right has-icons">
