Trying to get trending function to work

--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
         <ul id="dataModeMenu" class="dropdown-menu drop-menu data-dropdown mode-menu">
             <li id="dataModeCounts"><span>Counts</span><span class="checkmark">&#x2713</span></li>
             <li id="dataModePercents"><span>Percents</span><span class="checkmark">&#x2713</span></li>
+            <li id="dataModeTrends"><span>Trends</span><span class="checkmark">&#x2713</span></li>
         </ul>
     </div>
   </body>
